--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ footer section .outubroRosa {
     line-height: 2.4rem;
   }
   main .secao1 {
-    height: 377px;
+    height: 50vh;
     flex-direction: row;
     justify-content: space-around;
   }
@@ -218,7 +218,7 @@ footer section .outubroRosa {
     width: auto;
   }
   main .secao2 {
-    height: 262px;
+    height: 40vh;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
@@ -234,7 +234,7 @@ footer section .outubroRosa {
   }
   main .imagensdeConscientizacao {
     padding: 0;
-    height: 426px;
+    height: 48vh;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-evenly;
