--- a/style.scss
+++ b/style.scss
@@ -281,7 +281,7 @@ footer {
     
     main {
         .secao1 {
-            height: 377px; // Altura fixa da seção 1
+            height: 50vh;
             flex-direction: row;
             justify-content: space-around;
 
@@ -298,7 +298,7 @@ footer {
         }
 
         .secao2 {
-            height: 262px; // Altura fixa da seção 2
+            height: 40vh;
             flex-direction: row;
             justify-content: space-evenly;
             align-items: center;
@@ -317,7 +317,7 @@ footer {
         
         .imagensdeConscientizacao {
             padding: 0;
-            height: 426px;
+            height: 48vh;
             flex-direction: row;
             flex-wrap: nowrap; // Impede a quebra de linha
             justify-content: space-evenly;
