Ajuste das imagens para o Deploy

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ footer section .outubroRosa {
   }
   main .secao1 img {
     padding: 0;
-    width: auto;
+    width: 20%;
   }
   main .secao2 {
     height: 40vh;
@@ -230,7 +230,7 @@ footer section .outubroRosa {
   }
   main .secao2 img {
     padding: 0;
-    width: auto;
+    width: 25%;
   }
   main .imagensdeConscientizacao {
     padding: 0;
