--- a/style.scss
+++ b/style.scss
@@ -293,7 +293,7 @@ footer {
 
             img {
                 padding: 0; // Remove padding
-                width: auto;
+                width: 20%;
             }
         }
 
@@ -311,7 +311,7 @@ footer {
 
             img {
                 padding: 0;
-                width: auto;
+                width: 25%;
             }
         }
         
