ajuste dos tamanhos das imagens de conscientização

--- a/style.scss
+++ b/style.scss
@@ -286,7 +286,7 @@ footer {
             justify-content: space-around;
 
             p {
-                font-size: 1.45rem;
+                font-size: 1.25rem;
                 line-height: 2rem;
                 width: 40%; 
             }
@@ -304,7 +304,7 @@ footer {
             align-items: center;
 
             p {
-                font-size: 1.45rem;
+                font-size: 1.25rem;
                 line-height: 2rem;
                 width: 35%; // Define largura do parágrafo
             }
@@ -323,7 +323,7 @@ footer {
             justify-content: space-evenly;
             
             img {
-                width: auto;
+                width: 10%;
             }
         }
     }
