--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer section .outubroRosa {
     justify-content: space-around;
   }
   main .secao1 p {
-    font-size: 1.45rem;
+    font-size: 1.25rem;
     line-height: 2rem;
     width: 40%;
   }
@@ -224,7 +224,7 @@ footer section .outubroRosa {
     align-items: center;
   }
   main .secao2 p {
-    font-size: 1.45rem;
+    font-size: 1.25rem;
     line-height: 2rem;
     width: 35%;
   }
@@ -240,7 +240,7 @@ footer section .outubroRosa {
     justify-content: space-evenly;
   }
   main .imagensdeConscientizacao img {
-    width: auto;
+    width: 10%;
   }
   footer {
     height: 143px;
